--- a/deploy/single/depl-locust-manager.yaml
+++ b/deploy/single/depl-locust-manager.yaml
@@ -31,7 +31,8 @@ spec:
           - name: KAFKA_BOOTSTRAP_SERVERS
             value: "daisy-kafka-kafka-bootstrap.kafka.svc.cluster.local:9093"
           - name: KAFKA_TOPIC
-            value: "demo-topic"
+#            value: "demo-topic"
+            value: "perf-test-topic-0"
           - name: KAFKA_SECURITY_PROTOCAL
             value: "SSL"
           - name: KAFKA_CA_LOCATION
